k8s/deployment-uat.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: chouquette-spa-uat
  labels:
      app: chouquette-spa
      environment: uat
      tier: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: chouquette-spa
      environment: uat
  template:
    metadata:
      labels:
        app: chouquette-spa
        environment: uat
    spec:
      containers:
        - name: chouquette-spa-uat
          image: docker.lachouquette.ch/chouquette-spa:latest
          ports:
            - containerPort: 3000
