k8s/prod-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: chouquette-spa-prod
  labels:
      app: chouquette-spa
      environment: prod
      tier: frontend
spec:
  replicas: 3
  selector:
    matchLabels:
      app: chouquette-spa
      environment: prod
  template:
    metadata:
      labels:
        app: chouquette-spa
        environment: prod
    spec:
      containers:
        - name: chouquette-spa-prod
          image: docker.lachouquette.ch/chouquette-spa:latest
          ports:
            - name: container-port
              containerPort: 3000
          livenessProbe:
            httpGet:
              path: /health
              port: container-port
            failureThreshold: 3
            periodSeconds: 15
          startupProbe:
            httpGet:
              path: /
              port: container-port
            failureThreshold: 12
            periodSeconds: 5
