k8s/uat-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: chouquette-spa-uat
  labels:
      app: chouquette-spa
      environment: uat
      tier: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: chouquette-spa
      environment: uat
  template:
    metadata:
      labels:
        app: chouquette-spa
        environment: uat
    spec:
      containers:
        - name: chouquette-spa-uat
          image: docker.lachouquette.ch/chouquette-spa:latest
          command: ["/bin/bash", "-c", "yarn install @nuxtjs/vuetify", "yarn dev"]
          ports:
            - name: container-port
              containerPort: 3000
          startupProbe:
            httpGet:
              path: /
              port: container-port
            timeoutSeconds: 5
            failureThreshold: 8
            periodSeconds: 15
          readinessProbe:
            httpGet:
              path: /health
              port: container-port
            timeoutSeconds: 3
            failureThreshold: 3
            periodSeconds: 10
