k8s/prod-service.yml
apiVersion: v1
kind: Service
metadata:
  name: chouquette-spa-prod
spec:
  type: NodePort
  selector:
    app: chouquette-spa
    environment: prod
  ports:
    - port: 80
      targetPort: 3000
