k8s/uat-service.yml
apiVersion: v1
kind: Service
metadata:
  name: chouquette-spa-uat
spec:
  type: NodePort
  selector:
    app: chouquette-spa
    environment: uat
  ports:
    - port: 80
      targetPort: 3000
