k8s/ingress-uat.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: chouquette-spa
spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: chouquette-spa-uat
                port:
                  number: 80
