k8s/prod-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: chouquette-spa-prod
annotations:
  ingress.kubernetes.io/rewrite-target: /
  kubernetes.io/ingress.class: "nginx"
  nginx.ingress.kubernetes.io/from-to-www-redirect: "true"
  nginx.ingress.kubernetes.io/configuration-snippet: |
    if ($host = '' ) {
      rewrite ^ https://www.$request_uri permanent;
    }
spec:
  rules:
    - host: lachouquette.ch
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: chouquette-spa-prod
                port:
                  number: 80
    - host: www.lachouquette.ch
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: chouquette-spa-prod
                port:
                  number: 80
