k8s/uat-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: chouquette-spa-uat
spec:
  rules:
    - host: uat.lachouquette.ch
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: chouquette-spa-uat
                port:
                  number: 80
